[gd_scene load_steps=9 format=3 uid="uid://bpdgep5s0grcs"]

[ext_resource type="Script" path="res://Scripts/camera_controller.gd" id="1_rd627"]
[ext_resource type="Script" path="res://Scripts/player_controller.gd" id="1_wlado"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_yrt35"]
[ext_resource type="FontFile" uid="uid://d2f3idfnwjpfl" path="res://Fonts/Angels.ttf" id="4_g6kdo"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="4_ly5jd"]
[ext_resource type="Theme" uid="uid://ck6bpusqofpfo" path="res://Themes/theme.tres" id="5_orx8a"]

[sub_resource type="SphereShape3D" id="SphereShape3D_xcb20"]

[sub_resource type="Theme" id="Theme_7ua8w"]
default_font = ExtResource("4_g6kdo")
default_font_size = 30

[node name="Game" type="Node"]
script = ExtResource("1_yrt35")

[node name="Player" type="Node3D" parent="." node_paths=PackedStringArray("camera_setup")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0853562, 0.456624, 0.138734)
script = ExtResource("1_wlado")
camera_setup = NodePath("CameraSetup")

[node name="CameraSetup" type="Node3D" parent="Player"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_rd627")

[node name="SpringArm3D" type="SpringArm3D" parent="Player/CameraSetup"]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0)
collision_mask = 4
shape = SubResource("SphereShape3D_xcb20")
spring_length = 3.0

[node name="Camera3D" type="Camera3D" parent="Player/CameraSetup/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_ly5jd")

[node name="MainMenu" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SpacerTop" type="Control" parent="UI/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Title1" type="Label" parent="UI/MainMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("5_orx8a")
text = "Celestial"
horizontal_alignment = 1

[node name="Title2" type="Label" parent="UI/MainMenu/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("5_orx8a")
text = "sphere"
horizontal_alignment = 1

[node name="SpacerMiddle" type="Control" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="UI/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_orx8a")
text = "Start"

[node name="SpacerBottom" type="Control" parent="UI/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="FallenOffUI" type="Control" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -648.0
offset_right = 579.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/FallenOffUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -214.0
offset_top = -92.0
offset_right = 214.0
grow_horizontal = 2
grow_vertical = 0

[node name="RestartButton" type="Button" parent="UI/FallenOffUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_7ua8w")
text = "Return to last checkpoint"

[node name="SpacerTop" type="Control" parent="UI/FallenOffUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ResetButton" type="Button" parent="UI/FallenOffUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_7ua8w")
text = "reset level"

[node name="SpacerMiddle" type="Control" parent="UI/FallenOffUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="QuitButton" type="Button" parent="UI/FallenOffUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_7ua8w")
text = "quit"

[node name="SpacerBottom" type="Control" parent="UI/FallenOffUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="FinishedUI" type="Control" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/FinishedUI"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -222.0
offset_right = 222.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpacerTop" type="Control" parent="UI/FinishedUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="Finished" type="Label" parent="UI/FinishedUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("5_orx8a")
text = "finished"

[node name="SpacerMiddle" type="Control" parent="UI/FinishedUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuitButton" type="Button" parent="UI/FinishedUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = SubResource("Theme_7ua8w")
text = "quit"

[node name="SpacerBottom" type="Control" parent="UI/FinishedUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 8

[connection signal="detached" from="Player/CameraSetup" to="UI" method="_on_camera_setup_detached"]
[connection signal="pressed" from="UI/MainMenu/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UI/MainMenu/VBoxContainer/StartButton" to="UI" method="_on_start_button_pressed"]
[connection signal="pressed" from="UI/FallenOffUI/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="UI/FallenOffUI/VBoxContainer/RestartButton" to="UI" method="_on_restart_button_pressed"]
[connection signal="pressed" from="UI/FallenOffUI/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="UI/FallenOffUI/VBoxContainer/ResetButton" to="UI" method="_on_reset_button_pressed"]
[connection signal="pressed" from="UI/FallenOffUI/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="UI/FinishedUI/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
